--- a/src/automizy.css
+++ b/src/automizy.css
@@ -1,6 +1,7 @@
 @import url("styles/dialog.css");
 @import url("styles/button.css");
 @import url("styles/input.css");
+@import url("styles/input2.css");
 @import url("styles/form.css");
 @import url("styles/slideWindow.css");
 @import url("styles/table.css");
