--- a/src/automizy.css
+++ b/src/automizy.css
@@ -12,3 +12,4 @@
 @import url("styles/select.css");
 @import url("styles/icons.css");
 @import url("styles/alert.css");
+@import url("styles/message.css");
