--- a/src/automizy.css
+++ b/src/automizy.css
@@ -13,3 +13,4 @@
 @import url("styles/icons.css");
 @import url("styles/alert.css");
 @import url("styles/message.css");
+@import url("styles/panel.css");
